// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notification permission is already granted should create notification with correct defaults 1`] = `
Array [
  "Pomodoro Timer expired",
  Object {
    "body": "",
    "requireInteraction": true,
  },
]
`;

exports[`Notification permission is already granted should pass correct options when creating nofications 1`] = `
Array [
  "Batman v Superman",
  Object {
    "body": "Best movie ever",
    "requireInteraction": true,
  },
]
`;
